MB-37998 magma-kvstore: Configure thread local context reset method

Magma used to run a thread pool per magma instance and the threads from
the same pool were never shared with any other bucket. Currently, magma
has a global thread pool being shared by magma instances across buckets.

This commit adds thread context reset method in config to allow shared
thread pool to be reused across multiple magma instances.

Change-Id: I26fceefc7de71ac1121159434b4fb223c6e68b94
Reviewed-on: http://review.couchbase.org/122926
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Dave Rigby <daver@couchbase.com>