engines/ep/src/magma-kvstore/magma-kvstore.cc
@@ -584,6 +584,9 @@ MagmaKVStore::MagmaKVStore(MagmaKVStoreConfig& configuration)
     configuration.magmaCfg.SetupThreadContext = [currEngine]() {
         ObjectRegistry::onSwitchThread(currEngine, false);
     };
+    configuration.magmaCfg.ResetThreadContext = []() {
+        ObjectRegistry::onSwitchThread(nullptr);
+    };
 
     // Populate the magmaKVHandles
     magmaKVHandles =
